<resources>
    <string name="app_name">Kotlin App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="user_image_text">userImage</string>
    <string name="no_email_found">No email found</string>
    <string name="user_name">eve.holt@reqres.in</string>
    <string name="user_password">cityslicka</string>
    <string name="contact_list">Contact List</string>
    <string name="contact_details">Contact Details</string>
    <string name="no_internet">No network is connected</string>
</resources>