<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.myapplication.userlist.viewmodel.UserListViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userlist.view.UserListDetailFragment">

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/email"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/tvLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/last_name"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_sync"
        app:imageUrl="@{viewModel.currentUserData.avatar}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100"
        tools:src="@tools:sample/avatars"
        android:fontFamily="@font/helvetica_neu_light"
        android:contentDescription="@string/user_image_text" />

    <TextView
        android:id="@+id/tvFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/first_name"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:ellipsize="end"
        android:text="@{viewModel.currentUserData.first_name}"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:ellipsize="end"
        android:text="@{viewModel.currentUserData.last_name}"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <ProgressBar
        android:id="@+id/detailProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tvFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@{viewModel.currentUserData.email}"
        android:textColor="#2A0C5E"
        android:textSize="@dimen/textContent"
        android:fontFamily="@font/helvetica_neu_light"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName"  />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>